<resources>

    <string name="app_name">CrossStitchOrganiser</string>
	<string name="back">Back</string>
	
	<string name="failure_add_project_no_title">Could not create project. Please specify a project title.</string>
	<string name="failure_add_project_exist_p1">Project: </string>
	<string name="failure_add_project_exist_p2"> could not be created as it already exists! </string>
	<string name="failure_add_thread_no_dmc">Could not add thread. Please specify a DMC number</string>
	<string name="failure_add_thread_project">At least one thread did not have a DMC number and was not added to the project</string>

	<string name="placeholder">PLACEHOLDER: should not be seen</string>
	<string name="placeholder_project_add_title">(required)</string>
	<string name="placeholder_project_add_thread_dmc">XXX</string>
	<string name="placeholder_project_add_thread_amount">1.0</string>
	<string name="placeholder_thread_add_dmc">(required)</string>
	<string name="placeholder_thread_add_amount">(non-required: default is 1)</string>

	<string name="project_add_thread_dmc">DMC: </string>
	<string name="project_add_thread_amount">Skeins required: </string>
	<string name="projects_add_choose_image">Choose Image</string>
	<string name="projects_add_camera">Camera</string>
	<string name="projects_add_title">Add New Project</string>
	<string name="projects_add_name">Project Name:</string>
	<string name="projects_buy">Buy Project!</string>
	<string name="projects_current_title">Current Projects</string>
	<string name="projects_title">Projects</string>
	<string name="projects_add_more_threads">Add more threads to project </string>
	<string name="projects_wishlist_title">Wish List</string>
	<string name="projects_add_wishlist_text">Is this on your wishlist? </string>
	<string name="project_specific_thread_msg">Threads required:</string>

	<string name="shopping_list_title">Shopping List</string>
	<string name="submit">Submit</string>

	<string name="success_project_add">Successfully added project: </string>
	<string name="success_thread_creation">Successfully added thread: </string>
	<string name="success_thread_updated">Successfully updated thread: </string>

	<string name="threads_add_amount">Skeins owned: </string>
	<string name="threads_add_colour">Colour: </string>
	<string name="threads_add_dmc">DMC: </string>
	<string name="threads_add_title">Add Thread</string>
    <string name="threads_inventory_colour_title">Inventory By Colour</string>
    <string name="threads_inventory_full_title">Full Inventory</string>
	<string name="threads_title">Threads</string>
	<string name="thread_specific_amount">Skeins Owned:</string>
	<string name="thread_specific_dmc">DMC:</string>
	<string name="thread_specific_project_msg">Projects Used In</string>

	<string name="share">Share</string>
</resources>
