<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/windowBackground"
    tools:context="project.comp5216.crossstitchorganiser.HomePage">

	<Button
		android:id="@+id/homeThreadsNav"
		android:layout_width="wrap_content"
		android:background="@color/btnBackground"

		android:layout_height="wrap_content"
		android:layout_marginBottom="64dp"
		android:onClick="onThreadsNavClick"
		android:text="@string/threads_title"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"

		app:layout_constraintTop_toTopOf="parent" />

	<!-- TODO: change alignment so project is center and then the others are around that -->
	<Button
		android:id="@+id/homeProjectsNav"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:onClick="onProjectsNavClick"
		style="@style/ButtonStyle"
		android:text="@string/projects_title"
		android:textSize="24dp"
		app:layout_constraintBottom_toTopOf="@+id/homeShoppingListNav"
		app:layout_constraintRight_toRightOf="@id/homeThreadsNav"
		app:layout_constraintLeft_toLeftOf="@id/homeThreadsNav"
		app:layout_constraintTop_toBottomOf="@id/homeThreadsNav" />

	<Button
		android:id="@+id/homeShoppingListNav"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:onClick="onShoppingListNavClick"
		style="@style/ButtonStyle"
		android:text="@string/shopping_list_title"
		android:textSize="24sp"
		app:layout_constraintLeft_toLeftOf="@id/homeProjectsNav"
		app:layout_constraintRight_toRightOf="@id/homeProjectsNav"
		app:layout_constraintTop_toBottomOf="@id/homeProjectsNav" />


</androidx.constraintlayout.widget.ConstraintLayout>
