<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical">

	<View
		android:id="@+id/specificThreadColourRect"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:background="#DDDDDD"
		android:visibility="visible"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="@id/guidelineColourSep"
		app:layout_constraintBottom_toBottomOf="@id/guidelineTitleSep"
		/>


	<TextView
		android:id="@+id/specificThreadDmcTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/thread_specific_dmc"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintRight_toRightOf="@id/guidelineInfoSep"
		app:layout_constraintTop_toTopOf="parent" />
	<TextView
		android:id="@+id/specificThreadTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/placeholder"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="@id/guidelineInfoSep"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/specificThreadAmountTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="32dp"
		android:text="@string/thread_specific_amount"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/guidelineTitleSep"
		app:layout_constraintRight_toRightOf="@id/guidelineInfoSep"
		/>

	<TextView
		android:id="@+id/specificThreadAmountOwned"
		android:layout_width="wrap_content"
		android:textSize="16sp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="32dp"
		android:text="@string/placeholder"
		app:layout_constraintBottom_toBottomOf="@+id/guidelineTitleSep"
		app:layout_constraintLeft_toLeftOf="@id/guidelineInfoSep"
		app:layout_constraintRight_toRightOf="parent" />

	<TextView
		android:id="@+id/specificThreadProjectText"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginBottom="8dp"
		android:text="@string/thread_specific_project_msg"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@id/guidelineListSep"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent" />

	<ListView
		android:id="@+id/specificThreadProjectList"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toTopOf="@id/guidelineListSep"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintBottom_toTopOf="@id/specificThreadBack"
		/>

	<Button
		android:id="@+id/specificThreadBack"
		android:onClick="onSpecificThreadBackClick"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guidelineTitleSep"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_begin="130dp" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guidelineColourSep"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="130dp" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guidelineListSep"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_begin="180dp" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guidelineInfoSep"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="329dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
