<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:id="@+id/oldAmountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="Old Amount"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/newAmountTxt"
        app:layout_constraintRight_toRightOf="@id/guideline5" />

    <TextView
        android:id="@+id/oldAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/placeholder"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/threadsEditAmount"
        app:layout_constraintLeft_toLeftOf="@id/guideline5" />

    <TextView
        android:id="@+id/newAmountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="New Amount"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/threadsEditAmount"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"

        android:layout_height="wrap_content"
        android:hint="@string/placeholder_thread_edit_amount"
        android:inputType="numberDecimal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/threadsAddSubmit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onThreadsEditSubmitClick"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/threadsAddBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/threadsAddBack"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onThreadsEditBackClick"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />


</androidx.constraintlayout.widget.ConstraintLayout>